# c-error

./: CMakeLists.txt  LICENSE  README.md  README_CN.md  c_error.cmake
examples/: CMakeLists.txt  basic_usage.c
include/c-error/: lasterror.h  lasterror.hpp
src/: lasterror.c
